deploy/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: "database"
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:18-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: database-data
            - mountPath: /docker-entrypoint-initdb.d/
              name: init-script
      volumes:
        - name: init-script
          configMap:
            name: database-init-script
  volumeClaimTemplates:
    - metadata:
        name: database-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: database
