deploy/temporis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: temporis
  template:
    metadata:
      labels:
        app: temporis
    spec:
      containers:
      - name: temporis
        image: temporis:1.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7946
          name: gossip
---
apiVersion: v1
kind: Service
metadata:
  name: temporis
spec:
  selector:
    app: temporis
  ports:
  - name: gossip
    port: 7946
    targetPort: 7946
  clusterIP: None
